Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-201

unregistered bulk after reply unregistered causes "ptlrpc_set_wait" to hang

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.1.0
    • Lustre 2.0.0
    • None
    • 3
    • 21,760
    • 5073

      in ptlrpc_set_wait, the bulk is not unregistered if the reply was unregistered asynchronously, and the phase of the request was also changed into
      "RQ_PHASE_UNREGISTERING", which causes the "ptlrpc_set_wait" to hang for the bulk's state remains to be active (bulk->bd_network_rw == 1)

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: